// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SubscriptionStatus rendering tests Subscription - free plan - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-free-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
      >
        Abonnement
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        Du nutzt aktuell den kostenlosen Plan
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
        data-slot="button"
        data-testid="view-plans-link"
        href="/subscription/pricing"
      >
        View Plans
      </a>
    </div>
  </div>
</div>
`;

exports[`SubscriptionStatus rendering tests Subscription - paid plan - active - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-paid-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Abonnement
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            Verwalte dein Abonnement
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-primary-foreground [a&]:hover:bg-primary/90 bg-green-500"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check-big mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.801 10A10 10 0 1 1 17 3.335"
            />
            <path
              d="m9 11 3 3L22 4"
            />
          </svg>
          Aktiv
        </span>
      </div>
    </div>
    <div
      class="px-6 space-y-4"
      data-slot="card-content"
    >
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Aktueller Plan
        </div>
        <div
          class="text-lg font-semibold"
        >
          name-1
        </div>
      </div>
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Abrechnungszeitraum
        </div>
        <div
          class="capitalize"
        >
          yearly
        </div>
      </div>
      <div
        data-testid="current-period-end"
      >
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Nächstes Abrechnungsdatum
        </div>
        <div>
          27. Sept. 2025, 02:00 AM
        </div>
      </div>
      <div
        class="flex gap-2 pt-4"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="manage-billing-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Abonnement Verwalten
        </button>
        <div
          data-slot="alert-dialog"
          data-testid="dialog"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="cancel-subscription-btn"
          >
            Abonnement Kündigen
          </button>
          <div
            data-slot="alert-dialog-portal"
            data-testid="mock-react-alert-dialog-portal"
          >
            <div
              class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
              data-slot="alert-dialog-overlay"
              data-testid="mock-react-alert-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionStatus rendering tests Subscription - paid plan - canceled - currentPeriodEnd defined - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-paid-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Abonnement
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            Verwalte dein Abonnement
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          Gekündigt
        </span>
      </div>
    </div>
    <div
      class="px-6 space-y-4"
      data-slot="card-content"
    >
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Aktueller Plan
        </div>
        <div
          class="text-lg font-semibold"
        >
          name-1
        </div>
      </div>
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Abrechnungszeitraum
        </div>
        <div
          class="capitalize"
        >
          yearly
        </div>
      </div>
      <div
        data-testid="current-period-end"
      >
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Läuft ab am
        </div>
        <div>
          27. Sept. 2025, 02:00 AM
        </div>
      </div>
      <div
        class="rounded-lg border border-amber-200 bg-amber-50 p-4 dark:border-amber-800 dark:bg-amber-950"
        data-testid="cancel-at-period-end"
      >
        <div
          class="flex items-start"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert mt-0.5 mr-2 h-5 w-5 text-amber-600 dark:text-amber-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <div>
            <div
              class="font-medium text-amber-900 dark:text-amber-100"
            >
              Abonnement läuft aus
            </div>
            <div
              class="mt-1 text-sm text-amber-800 dark:text-amber-200"
            >
              Dein Abonnement endet am
               
              27. Sept. 2025, 02:00 AM
              . Du behältst bis dahin deinen Zugang.
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex gap-2 pt-4"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="manage-billing-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Abonnement Verwalten
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-slot="button"
          data-testid="reactivate-subscription-btn"
        >
          Reactivate
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionStatus rendering tests Subscription - paid plan - canceled - currentPeriodEnd null - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-paid-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Abonnement
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            Verwalte dein Abonnement
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          Gekündigt
        </span>
      </div>
    </div>
    <div
      class="px-6 space-y-4"
      data-slot="card-content"
    >
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Aktueller Plan
        </div>
        <div
          class="text-lg font-semibold"
        >
          name-1
        </div>
      </div>
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Abrechnungszeitraum
        </div>
        <div
          class="capitalize"
        >
          yearly
        </div>
      </div>
      <div
        class="rounded-lg border border-amber-200 bg-amber-50 p-4 dark:border-amber-800 dark:bg-amber-950"
        data-testid="cancel-at-period-end"
      >
        <div
          class="flex items-start"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert mt-0.5 mr-2 h-5 w-5 text-amber-600 dark:text-amber-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <div>
            <div
              class="font-medium text-amber-900 dark:text-amber-100"
            >
              Abonnement läuft aus
            </div>
            <div
              class="mt-1 text-sm text-amber-800 dark:text-amber-200"
            >
              Dein Abonnement endet am
               
              N/A
              . Du behältst bis dahin deinen Zugang.
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex gap-2 pt-4"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="manage-billing-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Abonnement Verwalten
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-slot="button"
          data-testid="reactivate-subscription-btn"
        >
          Reactivate
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionStatus rendering tests Subscription - paid plan - past due date - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-paid-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Abonnement
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            Verwalte dein Abonnement
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-destructive text-white [a&]:hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60"
          data-slot="badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          Überfällig
        </span>
      </div>
    </div>
    <div
      class="px-6 space-y-4"
      data-slot="card-content"
    >
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Aktueller Plan
        </div>
        <div
          class="text-lg font-semibold"
        >
          name-1
        </div>
      </div>
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Abrechnungszeitraum
        </div>
        <div
          class="capitalize"
        >
          yearly
        </div>
      </div>
      <div
        data-testid="current-period-end"
      >
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Nächstes Abrechnungsdatum
        </div>
        <div>
          27. Sept. 2025, 02:00 AM
        </div>
      </div>
      <div
        class="flex gap-2 pt-4"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="manage-billing-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Abonnement Verwalten
        </button>
        <div
          data-slot="alert-dialog"
          data-testid="dialog"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="cancel-subscription-btn"
          >
            Abonnement Kündigen
          </button>
          <div
            data-slot="alert-dialog-portal"
            data-testid="mock-react-alert-dialog-portal"
          >
            <div
              class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
              data-slot="alert-dialog-overlay"
              data-testid="mock-react-alert-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionStatus rendering tests Subscription - paid plan - paused - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="subscription-paid-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="space-y-2"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Abonnement
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            Verwalte dein Abonnement
          </div>
        </div>
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
          data-slot="badge"
        >
          PAUSED
        </span>
      </div>
    </div>
    <div
      class="px-6 space-y-4"
      data-slot="card-content"
    >
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Aktueller Plan
        </div>
        <div
          class="text-lg font-semibold"
        >
          name-1
        </div>
      </div>
      <div>
        <div
          class="mb-1 text-sm font-medium text-muted-foreground"
        >
          Abrechnungszeitraum
        </div>
        <div
          class="capitalize"
        >
          yearly
        </div>
      </div>
      <div
        class="flex gap-2 pt-4"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="manage-billing-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Abonnement Verwalten
        </button>
        <div
          data-slot="alert-dialog"
          data-testid="dialog"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="cancel-subscription-btn"
          >
            Abonnement Kündigen
          </button>
          <div
            data-slot="alert-dialog-portal"
            data-testid="mock-react-alert-dialog-portal"
          >
            <div
              class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
              data-slot="alert-dialog-overlay"
              data-testid="mock-react-alert-dialog-overlay"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
